--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,7 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0, user-scalable=no, viewport-fit=cover"
+    />
     <meta name="description" content="Group Chat Application with WebSocket" />
     <link rel="stylesheet" href="style.css" />
     <title>WebSocket Group Chat</title>
@@ -46,7 +49,7 @@
                 <svg
                   width="20"
                   height="20"
-                  viewBox="0 0 24 24"
+                  viewbox="0 0 24 24"
                   fill="currentColor"
                 >
                   <path d="M2,21L23,12L2,3V10L17,12L2,14V21Z" />
