Update from input

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -85,7 +85,8 @@
               id="usernameInput"
               class="form-input"
               placeholder="Enter your username..."
-              maxlength="30"
+              maxlength="20"
+              minlength="3"
               required
             />
           </div>
